--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: required
 services:
   - docker
-before-install:
+before_install:
   docker build -t miladi7/react-docker -f Dockerfile.dev .
 script:
   docker run miladi7/react-docker npm run test -- --coverage
