--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ services:
 before_install:
   docker build -t miladi7/react-docker -f Dockerfile.dev .
 script:
-  docker run miladi7/react-docker npm run test -- --coverage
+  docker run -e CI=true miladi7/react-docker npm run test 
