--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,18 @@ services:
 before_install:
   docker build -t miladi7/react-docker -f Dockerfile.dev .
 script:
-  docker run -e CI=true miladi7/react-docker npm run tes
+  docker run -e CI=true miladi7/react-docker npm run test
 
-
+deploy:
+  provider: elasticbeanstalk
+  region: "eu-west-3"
+  app: "react-docker"
+  env: "ReactDocker-env"
+  bucket_name: "elasticbeanstalk-eu-west-3-790084880600"
+  bucket_path: "react-docker"
+  on
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: 
+    secure: $AWS_SECRET_KEY
+    
