--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,9 @@ deploy:
   region: "eu-west-3"
   app: "react-docker"
   env: "ReactDocker-env"
+  bucket_name: "elasticbeanstalk-eu-west-3-790084880600"
+  bucket_path: "react-docker"
+  on
+    branch: master
  
     
