--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ deploy:
   env: "ReactDocker-env"
   bucket_name: "elasticbeanstalk-eu-west-3-790084880600"
   bucket_path: "react-docker"
-  on
-    branch: master
- 
+  access_key_id:
+    secure: $AWS_ACCESS_KEY
+  secret_access_key: 
+    secure: $AWS_SECRET_KEY
     
